Bug fixes. Trying to get the dock_with_cube function working. Updated swagger API further.
